Parser expressions (with finished mult / add)